# zAIn

./: .gitignore  README.md
jelli-companion/: .gitignore
jelli-companion/sidecar/: test_sidecar_e2e.py  tts_sidecar.py
jelli-companion/src/: App.tsx
jelli-companion/src-tauri/: Cargo.toml
jelli-companion/src-tauri/src/: lib.rs  llm.rs
jelli-companion/src/components/: BlobCanvas.tsx  ChatInput.tsx  ChatTextbox.tsx  ChatWidget.tsx  SettingsPanel.tsx
jelli-companion/src/lib/: api.ts  memory.ts  sfx.ts  system-prompt.ts
jelli-companion/src/stores/: config.ts  memory.ts
jelli-companion/src/styles/: globals.css
jelli-gateway/: wrangler.toml
progress/: CHAT_TTS_FEATURE_COMPLETE.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY_FINAL.md  INDEX.md  PROGRESS.md  QUICK_START.md  TECHNICAL_ARCHITECTURE_v2.md  TRANSPARENCY_FIX.md  USER_GUIDE.md  VISUAL_GUIDE.md  current_log  detailed_plan  tracker.html
zain-companion/: index.html  package-lock.json  package.json  vite.config.ts
zain-companion/.claude/: settings.local.json
zain-companion/sidecar/: csm_sidecar.py  download_model.py  requirements.txt  test_csm.py  test_import.py  test_minimal.py  test_path.py  test_sidecar_e2e.py
zain-companion/src/: App.tsx
zain-companion/src-tauri/: Cargo.toml  tauri.conf.json
zain-companion/src-tauri/capabilities/: default.json
zain-companion/src-tauri/src/: lib.rs  llm.rs  sidecar.rs
zain-companion/src/components/: BlobCanvas.tsx  ChatInput.tsx  ChatTextbox.tsx  ChatWidget.tsx  MessageBubble.tsx  MessageList.tsx  SettingsPanel.tsx
zain-companion/src/lib/: animation-presets.ts  api.ts  audio.ts  (+2 more)
(+5 files in other folders)
