[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
reqwest = { version = "0.12", features = ["stream", "json"] }
tokio = { version = "1", features = ["process", "io-util", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
base64 = "0.22"
bytes = "1"
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging"] }

# ─── Dev build speed optimisations ───────────────────────────────────────────
# Your own code: no optimisation, minimal debug info → fastest incremental compile
[profile.dev]
opt-level = 0
debug = 1          # line numbers only (not full DWARF) → smaller, faster
incremental = true

# Dependencies: compile once at opt-level 3, then cached forever
# This makes the app run at full speed while keeping YOUR rebuild times short
[profile.dev.package."*"]
opt-level = 3
debug = false

# Release stays at max optimisation for production builds
[profile.release]
opt-level = 3
lto = "thin"       # thin LTO = good balance of speed & size
codegen-units = 1
strip = true
